[tool.poetry]
name = "cipher_sc4752"
version = "0.1.0"
description = "This is a package for MDS homework7"
authors = ["jiajia <71299133+SijiaChen0110@users.noreply.github.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.8"

[tool.poetry.dev-dependencies]
sphinx = "^3.3.0"
sphinxcontrib-napoleon = "^0.7"
pytest = "^6.1.2"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
